# Verge

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  conftest.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/console/: Dockerfile  README.md  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/console/public/: manifest.json  sw.js
apps/console/src/: App.tsx  api.ts  i18n.ts  index.css  main.tsx  router.tsx
cli/: pyproject.toml
cli/tests/: test_cli_commission.py  test_cli_vision_watch.py
cli/verge_cli/: __init__.py  _paths.py  cli.py  commission.py  vision_watch.py
deploy/: .env.example  Dockerfile.api  Dockerfile.replay-feed  Dockerfile.risk-engine  README.md  docker-compose.yml  minio-worm.md  otel-collector-config.yaml
deploy/k8s/: README.md  api-deployment.yaml  api-service.yaml  configmap.yaml  console-deployment.yaml  console-service.yaml  ingress-tls.yaml  namespace.yaml  network-policy.yaml  pod-disruption-budget.yaml  risk-engine-deployment.yaml  secret.example.yaml
deploy/keycloak/: verge-realm.json
deploy/observability/: README.md  grafana-verge-plant-it.json  prometheus.yml
docs/: ARCHITECTURE.md  GENAI_ARCHITECTURE_AUDIT.md  PHASED_BUILD_PLAN.md  PRODUCT_AUDIT_AND_ROADMAP.md  backend_architecture_audit.md  commissioning.md  design_plan.md  dex.md  operations.md  progress.md
eval/: __init__.py  _paths.py  commissioning.py  harness.py  runtime.py
eval/agents/tests/: test_agent_eval.py
eval/baselines/: __init__.py  baselines.py
eval/knowledge/: __init__.py  metrics.py
eval/knowledge/gold/: entities.json
eval/tests/: test_harness.py  test_runtime.py
scenarios/compound-drill/: RADIO.md  scenario.yaml
scenarios/compound-drill-ci/: scenario.yaml
scripts/: commit_batch.py
services/api/: alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial_schema.py  0002_outbox_event.py  0003_voice_event.py
services/api/tests/: test_alert_dispatch_routes.py  test_api.py  test_audit_anchor.py  test_audit_anchor_routes.py  test_auth_rbac.py  test_backup_routes.py  test_cameras_routes.py  test_commission_route.py  test_compliance_routes.py  test_degradation_matrix.py  test_demo_drill.py  test_doc_hooks.py  test_docs_routes.py  test_durable_state.py  test_eval_report_route.py  test_evidence_store.py  test_fusion_route.py  test_memory_routes.py  test_models_routes.py  test_ops_routes.py  test_outbox.py  test_permit_upsert.py  test_permits_routes.py  test_plant_graph_route.py  test_platform_features.py  test_readings_outbox.py  test_replays_routes.py  test_reports_routes.py  test_store_contract.py  test_stream_bus.py  test_stream_routes.py  test_timescale_status.py  test_trace_join.py  test_vision_routes.py  test_voice_clips.py  test_voice_events_route.py  test_voice_routes.py  test_voice_sql_persist.py  test_watch_loop.py
services/api/verge_api/: audio_clip_cache.py  audit_anchor.py  auth.py  backup.py  camera_stream.py  db.py  degradation.py  demo_scenario.py  doc_hooks.py  evidence_store.py  fatigue_metrics.py  frame_store.py  graph_view.py  hooks.py  main.py  ops.py  outbox.py  permits_registry.py  rbac.py  reading_buffer.py  redpanda_fanout.py  redpanda_publish.py  sql_store.py  state_factory.py  store.py  stream_bus.py  stream_notify.py  telemetry.py  timescale_writer.py  trace.py  trace_index.py  trace_middleware.py  voice_events.py  watch_loop.py
services/api/verge_api/routes/: __init__.py  alerts.py  cameras.py  commission.py  compliance.py  degradation.py  demo.py  docs.py  eval_report.py  fatigue.py  fusion.py  investigate.py  memory.py  models.py  ops.py  permits.py  plant.py  plant_graph.py  plume.py  readings.py  replays.py  reports.py  stream.py  vision.py  voice.py  watch.py
services/connectors/: README.md  pyproject.toml
services/connectors/tests/: test_connectors.py
services/connectors/verge_connectors/: __init__.py  base.py  cmms.py  historian.py  registry.py
services/connectors/verge_connectors/samples/: cmms-permits.csv  historian-readings.csv  historian-tagmap.json
services/docintel/: pyproject.toml
services/docintel/tests/: test_docintel.py
services/docintel/verge_docintel/: __init__.py  extract.py  pipeline.py  textify.py
services/edge-gateway/: pyproject.toml
services/edge-gateway/tests/: test_edge.py  test_forward.py  test_gateway_autonomy.py  test_opcua_runner.py  test_replay_producer.py
services/edge-gateway/verge_edge/: __init__.py  buffer.py  forward.py  gateway.py  normalize.py  opcua_runner.py  replay_producer.py
services/forecaster/: pyproject.toml
services/forecaster/tests/: test_physics.py
services/forecaster/verge_forecaster/: __init__.py  physics.py
services/permit/: pyproject.toml
services/permit/tests/: test_conflicts.py
services/permit/verge_permit/: __init__.py  conflicts.py  findings.py
services/risk-engine/: pyproject.toml
services/risk-engine/tests/: test_cep.py  test_compound_fusion.py  test_dedupe_store.py  test_engine.py  test_fusion_predicates.py  test_ml_layer_registry.py  test_rule_library.py  test_runner_fusion_events.py
services/risk-engine/verge_risk/: __init__.py  __main__.py  cep.py  context.py  dedupe_store.py  engine.py  ml_layer.py  rules.py  runner.py
services/risk-engine/verge_risk/rules/: starter.yaml
services/vision/: README.md  pyproject.toml
services/vision/tests/: test_ultralytics_detector.py  test_vision.py
services/vision/verge_vision/: __init__.py  cameras.py  detect.py  rtsp_worker.py
services/vision/verge_vision/samples/: vizag-cameras.json  vizag-ppe.json
services/voice/: README.md  pyproject.toml
services/voice/tests/: test_voice.py  test_whisper_fallback.py
services/voice/verge_voice/: __init__.py  transcribe.py  whisper_fallback.py
sims/: pyproject.toml
sims/tests/: test_scenario.py
sims/verge_sims/: __init__.py  run.py  scenario.py
tests/: test_e2e_live_path.py
tests/integration/: test_horizon1_pipeline.py  test_memory_voice_path.py
(+108 files in other folders)
