[project]
name = "verge"
version = "0.3.0"
description = "The lead-time intelligence layer for zero-harm industrial operations."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
# Dev convenience: `uv sync` pulls the whole workspace + tooling into one venv.
dependencies = [
  "verge-schema",
  "verge-audit",
  "verge-llm",
  "verge-risk-engine",
  "verge-forecaster",
  "verge-edge-gateway",
  "verge-orchestrator",
  "verge-sims",
  "verge-cli",
  "verge-api",
]

[dependency-groups]
# httpx powers starlette's TestClient and the OpenAICompatProvider live path.
dev = ["pytest>=8", "ruff>=0.6", "httpx>=0.27"]

# The root is a virtual workspace root (an aggregator), not an installable package.
[tool.uv]
package = false

[tool.uv.workspace]
members = [
  "packages/schema",
  "packages/audit",
  "packages/llm",
  "services/api",
  "services/edge-gateway",
  "services/risk-engine",
  "services/forecaster",
  "services/orchestrator",
  "sims",
  "cli",
]

[tool.uv.sources]
verge-schema = { workspace = true }
verge-audit = { workspace = true }
verge-llm = { workspace = true }
verge-risk-engine = { workspace = true }
verge-forecaster = { workspace = true }
verge-edge-gateway = { workspace = true }
verge-orchestrator = { workspace = true }
verge-sims = { workspace = true }
verge-cli = { workspace = true }
verge-api = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["apps", "node_modules"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# `str, Enum` is intentional (pydantic use_enum_values + JSON-string members).
ignore = ["UP042"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["packages", "services", "eval", "sims", "tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
