[project]
name = "verge-cli"
version = "0.3.0"
description = "The verge CLI — replay, rules, sim, score."
requires-python = ">=3.11"
dependencies = [
    "verge-schema", "verge-risk-engine", "verge-twin", "verge-compliance", "verge-connectors",
    "verge-mlops", "verge-contracts", "verge-edge-gateway", "verge-supplychain",
    # opencv-python (not the -headless variant): verge-vision already pulls
    # opencv-python transitively via ultralytics in this shared workspace
    # venv, and the two distributions both ship a `cv2` module -- installing
    # both would conflict. This CLI never needs the GUI bits either way.
    "httpx>=0.27", "opencv-python>=4.9",
]

[project.optional-dependencies]
kafka = ["confluent-kafka>=2.5"]

[project.scripts]
verge = "verge_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verge_cli"]

[tool.uv.sources]
verge-schema = { workspace = true }
verge-risk-engine = { workspace = true }
verge-twin = { workspace = true }
verge-compliance = { workspace = true }
verge-connectors = { workspace = true }
verge-mlops = { workspace = true }
verge-contracts = { workspace = true }
verge-edge-gateway = { workspace = true }
verge-supplychain = { workspace = true }
