[project]
name = "verge-sims"
version = "0.3.0"
description = "SCADA/MQTT simulators emitting realistic event streams for dev and demo."
requires-python = ">=3.11"
dependencies = ["verge-schema"]

[project.optional-dependencies]
mqtt = ["paho-mqtt>=2.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verge_sims"]

[tool.uv.sources]
verge-schema = { workspace = true }
