[project]
name = "verge-api"
version = "0.3.0"
description = "FastAPI gateway — findings, lifecycle, feedback, sensor ribbon, SSE fan-out."
requires-python = ">=3.11"
dependencies = [
    "verge-schema",
    "verge-audit",
    "verge-llm",
    "verge-risk-engine",
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verge_api"]

[tool.uv.sources]
verge-schema = { workspace = true }
verge-audit = { workspace = true }
verge-llm = { workspace = true }
verge-risk-engine = { workspace = true }
