[project]
name = "verge-api"
version = "0.3.0"
description = "FastAPI gateway — findings, lifecycle, feedback, sensor ribbon, SSE fan-out."
requires-python = ">=3.11"
dependencies = [
    "verge-schema",
    "verge-audit",
    "verge-llm",
    "verge-memory",
    "verge-mlops",
    "verge-voice",
    "verge-risk-engine",
    "verge-orchestrator",
    "verge-permit",
    "verge-twin",
    "verge-compliance",
    "verge-vision",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "sqlalchemy>=2.0",
    "python-multipart>=0.0.9",
    "pyjwt[crypto]>=2.9",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2"]
object-store = ["minio>=7.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verge_api"]

[tool.uv.sources]
verge-schema = { workspace = true }
verge-audit = { workspace = true }
verge-llm = { workspace = true }
verge-memory = { workspace = true }
verge-mlops = { workspace = true }
verge-voice = { workspace = true }
verge-risk-engine = { workspace = true }
verge-orchestrator = { workspace = true }
verge-permit = { workspace = true }
verge-twin = { workspace = true }
verge-compliance = { workspace = true }
verge-vision = { workspace = true }
