[project]
name = "verge-connectors"
version = "0.3.0"
description = "Integration hub — historian/CMMS/VMS connectors emitting canonical events (spec §14)."
requires-python = ">=3.11"
dependencies = ["verge-schema", "verge-edge-gateway"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verge_connectors"]

[tool.hatch.build.targets.wheel.force-include]
"verge_connectors/samples" = "verge_connectors/samples"

[tool.uv.sources]
verge-schema = { workspace = true }
verge-edge-gateway = { workspace = true }
