[project]
name = "verge-docintel"
version = "0.3.0"
description = "Universal document ingestion, OCR, and entity extraction for Verge Knowledge."
requires-python = ">=3.11"
dependencies = [
  "verge-schema",
]

[project.optional-dependencies]
docling = ["docling>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verge_docintel"]

[tool.uv.sources]
verge-schema = { workspace = true }
