[project]
name = "verge-edge-gateway"
version = "0.3.0"
description = "Edge Gateway — OPC-UA/MQTT ingest, normalization, store-and-forward (P7)."
requires-python = ">=3.11"
dependencies = ["verge-schema"]

[project.optional-dependencies]
mqtt = ["paho-mqtt>=2.1"]
opcua = ["asyncua>=1.1"]
kafka = ["confluent-kafka>=2.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verge_edge"]

[tool.uv.sources]
verge-schema = { workspace = true }
