[project]
name = "verge-forecaster"
version = "0.3.0"
description = "Rate-based lead-time band forecaster (spec §4.2). v1 = transparent physics."
requires-python = ">=3.11"
dependencies = ["verge-schema"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verge_forecaster"]

[tool.uv.sources]
verge-schema = { workspace = true }
