[project]
name = "verge-permit"
version = "0.3.0"
description = "Digital permit-to-work + SIMOPS spatial-temporal conflict detection (Pillar 4)."
requires-python = ">=3.11"
dependencies = ["verge-schema"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verge_permit"]

[tool.uv.sources]
verge-schema = { workspace = true }
