[project]
name = "verge-risk-engine"
version = "0.3.0"
description = "Compound Risk Engine + sensor-health plane. LLM-independent (P1)."
requires-python = ">=3.11"
dependencies = [
  "verge-schema",
  "verge-contracts",
  "verge-mlops",
  "verge-forecaster",
  "verge-twin",
  "verge-permit",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
redpanda = ["confluent-kafka>=2.5"]
ml = ["scikit-learn>=1.5", "numpy>=1.26", "joblib>=1.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verge_risk"]

[tool.uv.sources]
verge-schema = { workspace = true }
verge-contracts = { workspace = true }
verge-mlops = { workspace = true }
verge-forecaster = { workspace = true }
verge-twin = { workspace = true }
verge-permit = { workspace = true }
